# whip-server

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.txt
cmake/: CMakeLists.txt  PrecompiledHeader.cmake  cmake_dummy.cpp  ucm.cmake
whip/: version.h  whip.cpp
